JS parallax issue on mobile test

--- a/docs/CSS/Main.css
+++ b/docs/CSS/Main.css
@@ -453,19 +453,19 @@ input[type="email"] {
   padding-left: 15px;
 }
 
-input[type="submit"] {
+input[type="button"] {
   text-transform: uppercase;
   font-size: 16px;
   margin-top: 20px;
   //margin-left: 278px;
 }
 
-input[type="submit"]:active {
+input[type="button"]:active {
   color: white;
   background: black;
 }
 
-input[type="submit"]:hover {
+input[type="button"]:hover {
   cursor: pointer;
   color: white;
   background: black;
@@ -529,14 +529,14 @@ textarea:focus + label, textarea.has-value + label {
   }
 
   div.contacts-info p:first-child, div.contacts-info p:last-child {
-    font-size: 16px;
+    font-size: 16.5px;
     width: 270px;
     margin-left: auto;
     margin-right: auto;
   }
 
   div.contacts-info p:last-child {    
-    width: 230px;
+    width: 240px;
   }
 
   div.contacts-info p:nth-child(2) {
@@ -582,7 +582,7 @@ textarea:focus + label, textarea.has-value + label {
   }
 
   input[type="text"], input[type="email"] {
-    width: 145px;
+    width: 147px;
   }
 
   #subject-input {
@@ -591,12 +591,6 @@ textarea:focus + label, textarea.has-value + label {
 
   input[type="email"] {
     padding-left: 0;
-  }
-
-  input[type="submit"] {
-    font-size: 16px;
-    margin-top: 20px;
-    //margin-left: 278px;
   }
 
   .input-group {
